observability/packages/jaeger-v2/manifests/fea/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jaeger
spec:
  parentRefs:
    - name: wac-hospital-gateway
      namespace: wac-hospital
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /jaeger
      backendRefs:
        - group: ""
          kind: Service
          name: jaeger-v2
          port: 80
    - matches:
      - path:
            type: PathPrefix
            value: /api/v3
      backendRefs:
        - group: ""
          kind: Service
          name: jaeger-v2
          port: 80
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /jaeger/api/v3
